// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for osaamisala koulutus, koulutusKoodiUri is resolved 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [
    "koulutus_371101#1",
  ],
  "koulutustyyppi": "amm-osaamisala",
  "metadata": Object {
    "koulutusalaKoodiUrit": Array [],
    "koulutustyyppi": "amm-osaamisala",
    "kuvauksenNimi": Object {},
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opintojenLaajuusKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [],
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;

exports[`getKoulutusByFormValues returns correct koulutuksetKoodiUri for ammatillinen koulutus 1`] = `
Object {
  "ePerusteId": 1,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [
    "koulutuskoodi_1#1",
  ],
  "koulutustyyppi": "amm",
  "metadata": Object {
    "koulutusalaKoodiUrit": Array [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "amm",
    "kuvauksenNimi": Object {},
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opintojenLaajuusKoodiUri": "laajuus_1#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [
      "nimike_1#1",
      "nimike_2#1",
    ],
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;

exports[`getKoulutusByFormValues returns correct koulutus given form values 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "koulutuksetKoodiUri": Array [
    "koulutus_371101#1",
    "koulutus_201000#1",
  ],
  "koulutustyyppi": "yo",
  "metadata": Object {
    "koulutusalaKoodiUrit": Array [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "yo",
    "kuvauksenNimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "kuvaus": Object {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [
      Object {
        "otsikkoKoodiUri": "osio_1#1",
        "teksti": Object {},
      },
      Object {
        "otsikkoKoodiUri": "osio_2#1",
        "teksti": Object {
          "fi": "<p>Fi kuvaus</p>",
          "sv": "<p>Sv kuvaus</p>",
        },
      },
    ],
    "opintojenLaajuusKoodiUri": "laajuus_1#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [
      "nimike_1#1",
      "nimike_2#1",
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "sorakuvausId": "1234",
  "tarjoajat": Array [
    "123.456.789",
  ],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`it should return empty array if no koulutusKoodiUri given 1`] = `
Object {
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": Array [],
  "koulutuksetKoodiUri": Array [],
  "koulutustyyppi": "yo",
  "metadata": Object {
    "koulutusalaKoodiUrit": Array [],
    "koulutustyyppi": "yo",
    "kuvauksenNimi": Object {},
    "kuvaus": Object {},
    "linkkiEPerusteisiin": Object {},
    "lisatiedot": Array [],
    "opintojenLaajuusKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": Array [],
    "tutkintonimikeKoodiUrit": Array [],
  },
  "muokkaaja": undefined,
  "nimi": Object {},
  "sorakuvausId": null,
  "tarjoajat": Array [],
  "teemakuva": undefined,
  "tila": undefined,
}
`;
